just fixed a minor input fild alignment

--- a/src/components/booking/shippingInfo/shippingInfo.css
+++ b/src/components/booking/shippingInfo/shippingInfo.css
@@ -83,6 +83,7 @@
 .card-details {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 .card-details div {
   display: flex;
